# switchboard

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  PROGRESS.md  README.md  SWITCHBOARD_COURSE.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DELIVERY_PLAN.md  DOMAIN_MODEL.md  EVALUATION_STRATEGY.md  OPERATIONS.md  PHASE_1_EVIDENCE.md  PROJECT_OVERVIEW.md  REQUIREMENTS.md  SECURITY_AND_POLICY.md  TESTING_STRATEGY.md  USE_CASES.md
docs/adr/: 0001-modular-monolith-with-worker.md  0002-durable-at-least-once-execution.md  0003-hybrid-tool-routing.md  0004-server-sent-events.md  0005-separate-conversation-history-from-turn-execution.md  0006-separate-tool-version-content-from-lifecycle.md  0007-postgresql-command-receipts-for-idempotency.md  0008-fingerprint-bound-durable-approval.md  0009-postgresql-owned-durable-workflow-progress.md
migrations/: env.py
migrations/versions/: 443feebc380e_enforce_unique_turn_start_event.py  928edc5afeb0_add_versioned_tool_registry.py  a7c8d9e0f1a2_add_tool_invocations.py  adfa099fa157_add_execution_events.py  b48f1c2d9a70_add_context_policy_and_summaries.py  b8d9e0f1a2b3_add_policy_evaluations_and_approvals.py  b9e0f1a2b3c4_add_awaiting_confirmation_state.py  ce2efcfed3d1_create_conversation_model.py  (+6 more)
planning/: DAY_01.md  DAY_02.md  DAY_03.md  DAY_04.md  DAY_05.md  DAY_06.md  DAY_07.md  DAY_08.md  DAY_09.md  DAY_10.md  DAY_11.md  DAY_12.md  DAY_13.md  DAY_14.md  DAY_15.md  DAY_16.md  DAY_17.md  DAY_18.md  DAY_19.md  DAY_20.md  README.md
tests/: __init__.py
(+166 files in other folders)
