[project]
name = "switchboard"
version = "0.1.0"
description = "Shared infrastructure for AI conversations, tool routing, safe execution, evaluation, and rollout."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "alembic>=1.18.5",
    "fastapi",
    "jsonschema>=4.25.1",
    "langgraph>=1.2,<2",
    "psycopg[binary]",
    "pydantic-settings",
    "redis",
    "sqlalchemy",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "httpx",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "ruff",
    "types-jsonschema",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/switchboard"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
]

[tool.ruff.lint.isort]
known-first-party = ["switchboard"]

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = "src"
packages = ["switchboard"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]

[project.scripts]
switchboard-worker = "switchboard.bootstrap.worker:main"
